--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@plasmicapp/cli": "^0.1.322",
     "@plasmicapp/react-web": "^0.2.303",
+    "@plasmicpkgs/plasmic-basic-components": "^0.0.201",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
